services/cert-manager/ingress_example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite-nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: YOUR_DOMAIN_HERE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: YOUR_SERVICE_HERE
            port:
                number: 8080
  tls:
  - hosts:
    - YOUR_DOMAIN_HERE
    secretName: mysite-tls-prod
